--- a/LA Data.ipynb
+++ b/LA Data.ipynb
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 189,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df = pd.read_excel('la_data.xlsx')"
+    "df = pd.read_excel('data/LA_Budget_Data.xlsx')"
    ]
   },
   {
@@ -383,15 +383,6 @@
     "\n",
     "Also, SVM performs worse given the program name and ID, because it probably just adds unneccessary complexity towards the fitting."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
