did some word2vec stuff

--- a/LA Data.ipynb
+++ b/LA Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,8 @@
     "import os, sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    " \n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from utils import random_cv_split, int_col_to_string, string_col_to_int, load_gensim_model"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -72,31 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
-    "def string_col_to_int(column, keys):\n",
-    "    \n",
-    "    for i, key in enumerate(keys):\n",
-    "        \n",
-    "        try:\n",
-    "        \n",
-    "            index = full_data[column] == key\n",
-    "        except:\n",
-    "            return\n",
-    "        \n",
-    "        full_data.loc[index, column] = i\n",
-    "        \n",
-    "        \n",
-    "string_col_to_int(\"Program_Priority\", priorities)\n",
-    "string_col_to_int(\"Expense_Type\", expenses)\n",
-    "string_col_to_int(\"Program_Name\", programs)\n",
-    "string_col_to_int(\"Dept_Code\", departments)\n",
-    "\n"
+    "full_data = string_col_to_int(\"Program_Priority\", priorities, full_data)\n",
+    "full_data = string_col_to_int(\"Expense_Type\", expenses, full_data)\n",
+    "full_data = string_col_to_int(\"Program_Name\", programs, full_data)\n",
+    "full_data = string_col_to_int(\"Dept_Code\", departments, full_data)"
    ]
   },
   {
@@ -108,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -146,55 +131,55 @@
        "    <tr>\n",
        "      <th>Dept_Code</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.543935</td>\n",
-       "      <td>-0.179315</td>\n",
-       "      <td>0.028250</td>\n",
-       "      <td>0.135587</td>\n",
-       "      <td>0.292920</td>\n",
+       "      <td>0.421186</td>\n",
+       "      <td>0.028695</td>\n",
+       "      <td>0.039360</td>\n",
+       "      <td>0.125308</td>\n",
+       "      <td>0.270991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Program_Name</th>\n",
-       "      <td>0.543935</td>\n",
+       "      <td>0.421186</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.226268</td>\n",
-       "      <td>0.054728</td>\n",
-       "      <td>0.222927</td>\n",
-       "      <td>0.353792</td>\n",
+       "      <td>0.200173</td>\n",
+       "      <td>0.033100</td>\n",
+       "      <td>0.073229</td>\n",
+       "      <td>0.050132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Program_Priority</th>\n",
-       "      <td>-0.179315</td>\n",
-       "      <td>-0.226268</td>\n",
+       "      <td>0.028695</td>\n",
+       "      <td>0.200173</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.062527</td>\n",
-       "      <td>-0.284997</td>\n",
-       "      <td>-0.048432</td>\n",
+       "      <td>0.104004</td>\n",
+       "      <td>0.062546</td>\n",
+       "      <td>0.013889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Appropriation</th>\n",
-       "      <td>0.028250</td>\n",
-       "      <td>0.054728</td>\n",
-       "      <td>0.062527</td>\n",
+       "      <td>0.039360</td>\n",
+       "      <td>0.033100</td>\n",
+       "      <td>0.104004</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.017380</td>\n",
-       "      <td>0.094468</td>\n",
+       "      <td>0.091814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fiscal_Year</th>\n",
-       "      <td>0.135587</td>\n",
-       "      <td>0.222927</td>\n",
-       "      <td>-0.284997</td>\n",
+       "      <td>0.125308</td>\n",
+       "      <td>0.073229</td>\n",
+       "      <td>0.062546</td>\n",
        "      <td>0.017380</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.146356</td>\n",
+       "      <td>0.127806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Expense_Type</th>\n",
-       "      <td>0.292920</td>\n",
-       "      <td>0.353792</td>\n",
-       "      <td>-0.048432</td>\n",
-       "      <td>0.094468</td>\n",
-       "      <td>0.146356</td>\n",
+       "      <td>0.270991</td>\n",
+       "      <td>0.050132</td>\n",
+       "      <td>0.013889</td>\n",
+       "      <td>0.091814</td>\n",
+       "      <td>0.127806</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -203,23 +188,23 @@
       ],
       "text/plain": [
        "                  Dept_Code  Program_Name  Program_Priority  Appropriation  \\\n",
-       "Dept_Code          1.000000      0.543935         -0.179315       0.028250   \n",
-       "Program_Name       0.543935      1.000000         -0.226268       0.054728   \n",
-       "Program_Priority  -0.179315     -0.226268          1.000000       0.062527   \n",
-       "Appropriation      0.028250      0.054728          0.062527       1.000000   \n",
-       "Fiscal_Year        0.135587      0.222927         -0.284997       0.017380   \n",
-       "Expense_Type       0.292920      0.353792         -0.048432       0.094468   \n",
+       "Dept_Code          1.000000      0.421186          0.028695       0.039360   \n",
+       "Program_Name       0.421186      1.000000          0.200173       0.033100   \n",
+       "Program_Priority   0.028695      0.200173          1.000000       0.104004   \n",
+       "Appropriation      0.039360      0.033100          0.104004       1.000000   \n",
+       "Fiscal_Year        0.125308      0.073229          0.062546       0.017380   \n",
+       "Expense_Type       0.270991      0.050132          0.013889       0.091814   \n",
        "\n",
        "                  Fiscal_Year  Expense_Type  \n",
-       "Dept_Code            0.135587      0.292920  \n",
-       "Program_Name         0.222927      0.353792  \n",
-       "Program_Priority    -0.284997     -0.048432  \n",
-       "Appropriation        0.017380      0.094468  \n",
-       "Fiscal_Year          1.000000      0.146356  \n",
-       "Expense_Type         0.146356      1.000000  "
+       "Dept_Code            0.125308      0.270991  \n",
+       "Program_Name         0.073229      0.050132  \n",
+       "Program_Priority     0.062546      0.013889  \n",
+       "Appropriation        0.017380      0.091814  \n",
+       "Fiscal_Year          1.000000      0.127806  \n",
+       "Expense_Type         0.127806      1.000000  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -240,17 +225,17 @@
      "output_type": "stream",
      "text": [
       "Keys:  ['Dept_Code']\n",
-      " Acc:  0.571494893222\n",
+      " Acc:  0.573002109210218\n",
       "Keys:  ['Appropriation']\n",
-      " Acc:  0.644586894587\n",
+      " Acc:  0.6322314049586777\n",
       "Keys:  ['Program_Name']\n",
-      " Acc:  0.588126588127\n",
+      " Acc:  0.5889246323529411\n",
       "Keys:  ['Program_Priority']\n",
-      " Acc:  0.483540076336\n",
+      " Acc:  0.49446749654218536\n",
       "Keys:  ['Dept_Code', 'Appropriation']\n",
-      " Acc:  0.745346062053\n",
+      " Acc:  0.7438646652370741\n",
       "Keys:  ['Program_Name', 'Program_Priority']\n",
-      " Acc:  0.574568659891\n"
+      " Acc:  0.5792183477650362\n"
      ]
     }
    ],
@@ -295,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -305,13 +290,13 @@
      "output_type": "stream",
      "text": [
       "Keys:  ['Program_Name', 'Appropriation']\n",
-      " Acc:  0.778542606219\n",
+      " Acc:  0.757351183361224\n",
       "Keys:  ['Program_Priority', 'Appropriation']\n",
-      " Acc:  0.612324672338\n",
+      " Acc:  0.6038794110773545\n",
       "Keys:  ['Program_Name', 'Appropriation', 'Dept_Code']\n",
-      " Acc:  0.783149171271\n",
+      " Acc:  0.7877647058823529\n",
       "Keys:  ['Dept_Code', 'Appropriation', 'Program_Name', 'Program_Priority']\n",
-      " Acc:  0.751053864169\n"
+      " Acc:  0.7599906520215004\n"
      ]
     }
    ],
@@ -333,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -342,8 +327,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC guaranteed data Score:  0.702265372168\n",
-      "SVC not guaranteed data Score:  0.701571890892\n"
+      "SVC guaranteed data Score:  0.6964368347987043\n",
+      "SVC not guaranteed data Score:  0.6881073577047663\n"
      ]
     }
    ],
@@ -383,6 +368,135 @@
     "\n",
     "Also, SVM performs worse given the program name and ID, because it probably just adds unneccessary complexity towards the fitting."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLP\n",
+    "\n",
+    "A major idea in NLP is the idea that word can be encoded into a vector space. Something interesting about this vector space, however, is that the difference in values (i.e. distance) between similar words and phrases will be smaller than the difference in values between dissimilar words. I'm going to try to leverage these encodings to see if there is a greater theme in either program priority or program names and the expense types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gensim\n",
+    "from gensim.models import word2vec\n",
+    "import logging, urllib.request, zipfile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download and load training data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Gensim\n",
+    "\n",
+    "We have to first train Gensim on data in order to load the word2vec of our data. These are some functions to read the zipfile, extract the zipfile, train gensim, and finally save the model under 'mymodel' so we don't have to retrain every time\n",
+    "\n",
+    "I did packaged all this into a load_gensim_model function which takes in a root path to search for the data and model. If it finds the model it loads it, otherwise, it reads the data, trains the model, saves the model and returns the model. You can read the code in my utils.py file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found and verified text8.zip\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = load_gensim_model(os.getcwd()+\"/data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dim = 300\n",
+    "\n",
+    "def sentence2vec(words):\n",
+    "    \"\"\"\n",
+    "    Module that converts takes in a string \n",
+    "    with multiple words, takes the word2vec\n",
+    "    of each word, and then averages them all\n",
+    "    to get a sentence to vec\n",
+    "    \n",
+    "    For this dataset, no tf-idf is needed\n",
+    "    because no word appears twice in a single sentance\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    avg_vec = np.array([\n",
+    "                    np.mean([model.wv[w] for w in words.split() if w in model.wv]\n",
+    "                            or [np.zeros(dim)], axis=0)\n",
+    "                ]).reshape([300])\n",
+    "    return avg_vec\n",
+    "\n",
+    "\n",
+    "def add_vector_column(column_name, keys, df):\n",
+    "    \n",
+    "    vector_keys = []\n",
+    "    \n",
+    "    for key in keys:\n",
+    "        \n",
+    "        #print(key)\n",
+    "        vector_keys.append(sentence2vec(key))\n",
+    "        \n",
+    "    #print(vector_keys)\n",
+    "    \n",
+    "    \n",
+    "    col = np.zeros([df.shape[0]] )\n",
+    "    \n",
+    "    for i, key in enumerate(keys):\n",
+    "        index = df[column_name] == key\n",
+    "        \n",
+    "        np.place(col, index, vector_keys[i])\n",
+    "        \n",
+    "    \n",
+    "    df[column_name+\"_Vectors\"] = col\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "df = add_vector_column(\"Program_Name\", programs, full_data)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
