--- a/Data Digging Notebook.ipynb
+++ b/Data Digging Notebook.ipynb
@@ -1890,7 +1890,7 @@
    "execution_count": 170,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
    "source": [
     "# SVM\n",
     "\n",
-    "I'm pretty sure that this data is, again, way too broad to be fit by"
+    "Now that the dimensions have been reduced, I want to try an SVM to see if it is actually able to fit this data"
    ]
   },
   {
